--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,13 +4,50 @@
 	font-weight: 100;
 	scroll-behavior: smooth;
 }
+
+.img-responsive{
+	width:150px;
+	height: 150px;
+
+}
+
+body{
+	background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
+}
+
+.boton-top{
+    position:fixed;
+    width:60px;
+    height:60px;
+    line-height: 63px;
+    bottom:25px;
+    right:25px;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    font-size:35px;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+    z-index:100;
+    transition: all 300ms ease;
+	text-decoration: none;
+}
+.boton-top:hover{
+    background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
+}
+@media only screen and (min-width:320px) and (max-width:768px){
+    .boton-top{
+        width:63px;
+        height:63px;
+        line-height: 66px;
+	}
+}
 /*EJEMPLO PREENTREGA
 
 body{
-	font-family: 'Wix Madefor Display', sans-serif;
-	background-color: #d8dacecb;
+	background: rgb(255,14,118);
+	background: radial-gradient(circle, rgba(255,14,118,1) 30%, rgba(255,255,255,1) 56%);
 }
-*/
+
 
 
 .mainmenu__inicio {
@@ -29,11 +66,6 @@ body{
 	color: #ff0000;
 }
 
-.img-responsive{
-	width:150px;
-	height: 150px;
-
-}
 
 .menu {
 	display: flex;
