--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 10px;
@@ -8,6 +9,8 @@
 body {
   font-size: 18px;
   background: linear-gradient(to top, #ada996, #f2f2f2, #dbdbdb, #eaeaea);
+  position: relative;
+  min-height: 100vh;
 }
 body a {
   padding: 0;
@@ -42,4 +45,85 @@ body .boton-top:hover {
     height: 63px;
     line-height: 66px;
   }
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  z-index: 90;
+}
+
+.logo {
+  font-size: 40px;
+  font-weight: 700;
+  color: #000000;
+  text-decoration: none;
+  transition: 1s;
+}
+
+.logo:hover {
+  color: #000000;
+  transition: 1s;
+}
+
+/* sm se aplica a dispositivos x-small (teléfonos verticales, menos de 576px)*/
+@media screen and (max-width: 575.98px) {
+  .logo {
+    font-size: 20px;
+    font-weight: 700;
+    color: #ffffff;
+    text-decoration: none;
+    transition: 2s;
+  }
+}
+/* Dispositivos pequeños (teléfonos horizontales, 576px y más)*/
+@media (min-width: 576px) {
+  .logo {
+    font-size: 25px;
+    font-weight: 700;
+    color: #ffffff;
+    text-decoration: none;
+    transition: 2s;
+  }
+}
+/* Dispositivos XX-Large (escritorios más grandes, 1400px y más)*/
+@media (min-width: 1400px) {
+  .logo {
+    font-size: 45px;
+    font-weight: 700;
+    color: #ffffff;
+    text-decoration: none;
+    transition: 2s;
+  }
+}
+.hamburger_menu {
+  color: #ffffff;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.offcanvas {
+  background-color: linear-gradient(to top, #ffb347, #ffcc33);
+}
+
+.offcanvas-body {
+  background-color: linear-gradient(to top, #ffb347, #ffcc33);
+}
+
+.menu li a {
+  color: #0d6efd;
+  text-decoration: none;
+  font-size: 30px;
+}
+
+.menu li a:hover {
+  color: #ffffff;
+  background-color: #0d6efd;
+  transition: 0.5s;
 }/*# sourceMappingURL=estilos.css.map */
